# spiral-io

spiral-core/: CMakeLists.txt
spiral-core/include/spiral/: RefCounted.h  memory.h
spiral-core/include/spiral/application/: Application.h
spiral-core/include/spiral/internet/address/: IPv4Address.h
spiral-core/include/spiral/internet/base/: ReactorBase.h
spiral-core/include/spiral/internet/boostreactor/: BoostReactor.h  Client.h  DelayedCall.h  Server.h
spiral-core/include/spiral/internet/interfaces/: IConsumer.h  IHalfCloseableProtocol.h  IListeningPort.h  IProtocolFactory.h  IReactorTime.h
spiral-core/include/spiral/internet/protocol/: BaseProtocol.h  Protocol.h
spiral-core/include/spiral/log/: Helpers.h  Options.h  Statement.h
spiral-core/include/spiral/log/windows/: SinkOptions.h
spiral-core/include/spiral/protocols/basic/: LineOnlyReceiver.h
spiral-core/include/spiral/sys/: Runnable.h
spiral-core/samples/basic/: main.cpp
spiral-core/samples/chat/: chatserver.cpp
spiral-core/samples/echo/: core-echoserver.vcproj
spiral-core/src/application/: Application.cpp
spiral-core/src/internet/boostreactor/: Connection.cpp  DelayedCall.cpp  Server.cpp
spiral-core/src/internet/protocol/: ReconnectingClientFactory.cpp
spiral-core/src/protocols/basic/: LineOnlyReceiver.cpp  LineReceiver.cpp
spiral/branch/tcp-testsuite/: CMakeLists.txt
spiral/branch/tcp-testsuite/spiral-core/: CMakeLists.txt
spiral/branch/tcp-testsuite/spiral-core/include/spiral/internet/base/: Callable.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/internet/boostreactor/: Connection.h  Connector.h  SocketCloser.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/internet/interfaces/: IAddress.h  IDelayedCall.h  IFinishableConsumer.h  IProducer.h  IProtocol.h  IReactor.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/internet/protocol/: ServerFactory.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/log/: OstreamOutput.h  SinkOptions.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/log/posix/: SinkOptions.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/protocols/basic/: LineReceiver.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/sys/posix/: IntegerTypes.h
spiral/branch/tcp-testsuite/spiral-core/include/spiral/sys/windows/: IntegerTypes.h
spiral/branch/tcp-testsuite/spiral-core/samples/: CMakeLists.txt
spiral/branch/tcp-testsuite/spiral-core/samples/echo/: CMakeLists.txt  core-echoclient.vcproj  simpleserver.cpp
spiral/branch/tcp-testsuite/spiral-core/src/: Options.cpp
spiral/branch/tcp-testsuite/spiral-core/src/internet/base/: ReactorBase.cpp
spiral/branch/tcp-testsuite/spiral-core/src/internet/boostreactor/: BoostReactor.cpp  Connector.cpp
spiral/branch/tcp-testsuite/spiral-core/src/log/: Logger.cpp  Selector.cpp  Statement.cpp
spiral/branch/tcp-testsuite/spiral-core/src/log/posix/: SinkOptions.cpp
spiral/branch/tcp-testsuite/spiral-core/test/: CMakeLists.txt  test_tcp.cpp
spiral/trunk/: CMakeLists.txt  README  spiral.sln
spiral/trunk/spiral-core/: spiral-core.vcproj
spiral/trunk/spiral-core/include/spiral/: Exception.h  Msg.h  Options.h
spiral/trunk/spiral-core/include/spiral/internet/: Error.h
spiral/trunk/spiral-core/include/spiral/internet/base/: BaseConnector.h  DelayedCall.h
spiral/trunk/spiral-core/include/spiral/internet/boostreactor/: Connection.h  Port.h
spiral/trunk/spiral-core/include/spiral/internet/interfaces/: IConnector.h  IPullProducer.h  IPushProducer.h  IReactorCore.h  IReactorTCP.h  ITCPTransport.h  ITransport.h
spiral/trunk/spiral-core/include/spiral/internet/protocol/: ClientFactory.h  ProtocolFactory.h  ReconnectingClientFactory.h
spiral/trunk/spiral-core/include/spiral/log/: Logger.h  Selector.h
spiral/trunk/spiral-core/include/spiral/sys/: IntegerTypes.h
spiral/trunk/spiral-core/samples/basic/: CMakeLists.txt  basic.vcproj
spiral/trunk/spiral-core/samples/chat/: CMakeLists.txt  core-chat.vcproj
spiral/trunk/spiral-core/samples/echo/: simpleclient.cpp
spiral/trunk/spiral-core/src/: Exception.cpp
spiral/trunk/spiral-core/src/internet/base/: BaseConnector.cpp  DelayedCall.cpp
spiral/trunk/spiral-core/src/internet/boostreactor/: Client.cpp  Port.cpp
spiral/trunk/spiral-core/src/log/: Options.cpp  OstreamOutput.cpp
spiral/trunk/spiral-core/src/log/windows/: SinkOptions.cpp
